[CYB-3] Nashorn -> GraalVM switch